--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
         <h1><a href="index.html">DESN 368</a></h1>
           <nav>
           <dl class="sub-nav">
-            <dd><a href="index.html" class="active">Home</a></dd>
-            <dd><a href="post/wk1-b.html">Today</a></dd>
+            <dd><a href="post/wk2-a.html">Today</a></dd>
             <dd><a href="#">Stages</a></dd>
             <dd><a href="#">Reference</a></dd>
           </dl>
@@ -32,9 +31,17 @@
       <hr>
 
       <div class="large-8 columns panel callout radius">
-        <h2><a href="post/wk1-b.html">Today</a></h2>
-        <p>Continue to setup tools, use version control and staging of websites. Review TreeHouse project (collection of badges) : Build A Simple Website.</p>
-        <h6><a href="post/wk1-b.html">Go-to Today's Post</a></h6>
+        <h2><a href="post/wk2-a.html">Today</a></h2>
+        <p>Continue to <strong>Build a Simple Website</strong> project on TreeHouse. 
+          <ul>
+            <li>Creating Structure</li>
+            <li>Styling Content</li>
+            <li>Launching Website</li>
+          </ul>
+        </p>
+        <p>Introduce <strong>Design</strong> principles and objectives. 
+        </p>
+        <h6><a href="post/wk2-a.html">Go-to Today's Post</a></h6>
       </div>
       <div class="large-4 columns">
         <h2>Notices</h2>
@@ -63,7 +70,11 @@
           </div>
           <div class="large-4 columns">
             <h3>Week 2</h3>
-            <i>links to be added</i>
+            <ul>
+              <li><a href="post/wk2-a.html">Mon/Tue: 1/13 &amp; 1/14</a></li>
+              <li>Wed/Thur: 1/1 &amp; 1/16</li>
+              <li><a href="https://docs.google.com/forms/d/1ThhYCXdNT-ZllmCqvgg5ozIBRBbutddDf8J6AHCAuaY/edit">Assignment 2</a> Due 1/17 at 5pm</li>
+            </ul>
           </div>
           <div class="large-4 columns">
             <h3>Week 3</h3>
