--- a/index.html
+++ b/index.html
@@ -31,25 +31,9 @@
       <hr>
 
       <div class="large-8 columns panel callout radius">
-        <h2><a href="post/wk2-a.html">Today</a></h2>
-        <p>Continue to <strong>Build a Simple Website</strong> project on TreeHouse. 
-          <ul>
-            <li>Creating Structure</li>
-            <li>Styling Content</li>
-            <li>Launching Website</li>
-          </ul>
-        </p>
-        <p>Introduce <strong>Design</strong> principles and objectives. 
-        </p>
-        <h6><a href="post/wk2-a.html">Go-to Today's Post</a></h6>
-      </div>
-      <div class="large-4 columns">
-        <h2>Notices</h2>
-          <ul>
-            <li><a href="http://manikoth.com/poll">Possible 3rd Section Poll</a></li>
-            <li><a href="http://manikoth.com/as1">Assignment 1</a> Due Friday at 11am (updated)</li>
-            <li>Plus Groups: CEB 131 9am to 11am</li>
-          </ul>
+        <h2><a href="post/wk2-b.html">Today</a></h2>
+        <p>Today's recorded lecture and exercises. See video and following instructions. Take breaks as needed.</p>
+        <p><a href="post/wk2-b.html">Today's Lecture</a></p>
       </div>
     </div>
   
