--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <h1><a href="index.html">DESN 368</a></h1>
           <nav>
           <dl class="sub-nav">
-            <dd><a href="post/wk2-a.html">Today</a></dd>
+            <dd><a href="index.html">Today</a></dd>
             <dd><a href="#">Stages</a></dd>
             <dd><a href="#">Reference</a></dd>
           </dl>
@@ -32,7 +32,11 @@
 
       <div class="large-8 columns panel callout radius">
         <h2><a href="post/wk2-b.html">Today</a></h2>
-        <p>Today's recorded lecture and exercises. See video and following instructions. Take breaks as needed.</p>
+          <ul>
+            <li><a href="https://docs.google.com/forms/d/1B8Z9ig5ecMbqr27R8T38P2NTJUw4POF5iID7MSG0wxM/viewform">Assignment 3</a></li>
+            <li>Update: Assignment 3 Due at <strong>Monday 1/27 at 5pm</strong>. If compledte by Friday, 1/25 at 5pm will receive extra credit.</li>
+            <li>Work &amp; Review day. No in class lecture.</li>
+          </ul>
         <p><a href="post/wk2-b.html">Today's Lecture</a></p>
       </div>
     </div>
@@ -62,7 +66,8 @@
           </div>
           <div class="large-4 columns">
             <h3>Week 3</h3>
-            <i>links to be added</i>
+            <li><i>Mon/Tue: 1/20 &amp; 1/21. No Class</i></li>
+            <li><a href="post/wk3-b.html">Wed/Thur: 1/22 &amp; 1/23</a></li>
           </div>
       </div>
     </div>
