--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
             <h3>Week 3</h3>
             <li><i>Mon/Tue: 1/20 &amp; 1/21. No Class</i></li>
             <li><a href="post/wk3-b.html">Wed/Thur: 1/22 &amp; 1/23</a></li>
+            <li><a href="https://docs.google.com/forms/d/1B8Z9ig5ecMbqr27R8T38P2NTJUw4POF5iID7MSG0wxM/viewform">Assignment 3</a>
+              <ul>
+                <li>Extra Credit: Completed by Friday 1/24 at 5pm</li>
+                <li>New Due Date: Monday 1/27 at 5pm</li>
+              </ul>
+            </li>
           </div>
       </div>
     </div>
