--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h2><a href="post/wk2-b.html">Today</a></h2>
           <ul>
             <li><a href="https://docs.google.com/forms/d/1B8Z9ig5ecMbqr27R8T38P2NTJUw4POF5iID7MSG0wxM/viewform">Assignment 3</a></li>
-            <li>Update: Assignment 3 Due at <strong>Monday 1/27 at 5pm</strong>. If compledte by Friday, 1/25 at 5pm will receive extra credit.</li>
+            <li>Update: Assignment 3 Due at <strong>Monday 1/27 at 5pm</strong>. If completed by Friday, 1/25 at 5pm will receive extra credit.</li>
             <li>Work &amp; Review day. No in class lecture.</li>
           </ul>
         <p><a href="post/wk2-b.html">Today's Lecture</a></p>
