--- a/index.html
+++ b/index.html
@@ -31,13 +31,15 @@
       <hr>
 
       <div class="large-8 columns panel callout radius">
-        <h2><a href="post/wk2-b.html">Today</a></h2>
+        <h2><a href="post/wk4-a.html">Today</a></h2>
+          
           <ul>
-            <li><a href="https://docs.google.com/forms/d/1B8Z9ig5ecMbqr27R8T38P2NTJUw4POF5iID7MSG0wxM/viewform">Assignment 3</a></li>
-            <li>Update: Assignment 3 Due at <strong>Monday 1/27 at 5pm</strong>. If completed by Friday, 1/25 at 5pm will receive extra credit.</li>
-            <li>Work &amp; Review day. No in class lecture.</li>
+            <li>Start P1: Bio project</li>
+            <li>Box Model properties</li>
+            <li>Cont. Chrome DevTools &amp; GitHub staging</li>
           </ul>
-        <p><a href="post/wk2-b.html">Today's Lecture</a></p>
+
+        <p><a href="post/wk4-a.html">Today's Lecture</a></p>
       </div>
     </div>
   
@@ -51,6 +53,7 @@
           <div class="large-4 columns">
             <h3>Week 1</h3>
             <ul>
+              <li><a href="https://github.com/vcd/368/wiki/368-Syllabus">Syllabus</a></li>
               <li><a href="post/wk1-a.html">Mon/Tue: 1/6 &amp; 1/7</a></li>
               <li><a href="post/wk1-b.html">Wed/Thur: 1/8 &amp; 1/9</a></li>
               <li><a href="http://manikoth.com/as1">Assignment 1</a> Due Friday at 11am</li>
