--- a/index.html
+++ b/index.html
@@ -79,7 +79,29 @@
             </li>
           </div>
       </div>
+
+      <div class="large-12 columns">
+        <h2>Stage 2: Layout, Advanced Selectors, &amp; Design in Browser</h2>
+          <div class="large-4 columns">
+            <h3>Week 4</h3>
+            <ul>
+              <li><a href="https://docs.google.com/forms/d/1zPNp0WvuOYg2HqXK2WCeMlIxXPTEYiNQs6_iE6USzX8">Project 1</a>, Due Friday, 1/31 at 5pm</li>
+              <li><a href="post/wk4-b.html">Mon/Tue: 1/27 &amp; 1/28</a></li>
+            </ul>
+          </div>
+          <div class="large-4 columns">
+            <h3>Week 5</h3>
+          </div>
+          <div class="large-4 columns">
+            <h3>Week 6</h3>
+          </div>
+      </div>
     </div>
+
+
+    </div>
+
+
 
 
 
