--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
       <hr>
 
       <div class="large-8 columns panel callout radius">
-        <h2><a href="post/wk4-a.html">Today</a></h2>
+        <h2><a href="post/wk4-b.html">Today</a></h2>
           
           <ul>
-            <li>Start P1: Bio project</li>
             <li>Box Model properties</li>
             <li>Cont. Chrome DevTools &amp; GitHub staging</li>
+            <li>Intro. Floats & Positioning</li>
           </ul>
 
-        <p><a href="post/wk4-a.html">Today's Lecture</a></p>
+        <p><a href="post/wk4-b.html">Today's Lecture</a></p>
       </div>
 
       <div class="large-4 columns">
