--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
       <hr>
 
       <div class="large-8 columns panel callout radius">
-        <h2><a href="post/wk4-b.html">Today</a></h2>
+        <h2><a href="post/wk5-a.html">Today</a></h2>
           
           <ul>
-            <li>Box Model properties</li>
-            <li>Cont. Chrome DevTools &amp; GitHub staging</li>
-            <li>Intro. Floats & Positioning</li>
-            <li><a href="post/p1-bio.html">Project 1 : Bio</a></li>
+            <li>Start<a href="post/p2-resume.html">P2 : Resume</a></li>
+            <li>cont. float &amp; positioning properties</li>
+            <li>CSS Specificity</li>
+            <li>Midterm Review</li>
           </ul>
 
         <p><a href="post/wk4-b.html">Today's Lecture</a></p>
@@ -47,7 +47,7 @@
       
       <h3>Notices</h3>
       <ul>
-        <li><a href="post/p1-bio.html">Project 1 : Bio</a>, Due Sunday 2/2 at 5pm</li>
+        <li>Start<a href="post/p2-resume.html">P2 : Resume</a>, Due Sunday 2/9 at 5pm</li>
       </ul>
 
     </div>
@@ -100,14 +100,16 @@
             <ul>
               <li><a href="post/p1-bio.html">Project 1 : Bio</a>, Due Sunday 2/2 at 5pm</li>
               <li><a href="post/wk4-a.html">Mon/Tue: 1/27 &amp; 1/28</a></li>
-              <li><a href="post/wk4-v.html">Mon/Tue: 1/29 &amp; 1/30</a></li>
+              <li><a href="post/wk4-b.html">Mon/Tue: 1/29 &amp; 1/30</a></li>
             </ul>
           </div>
           <div class="large-4 columns">
             <h3>Week 5</h3>
+            <li><a href="post/wk5-a.html">Mon/Tue: 2/3 &amp; 2/4</a></li>
           </div>
           <div class="large-4 columns">
             <h3>Week 6</h3>
+            <li>Midterm: Mon/Tue 2/10 &amp; 2/11</li>
           </div>
       </div>
     </div>
