--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <li>Midterm Review</li>
           </ul>
 
-        <p><a href="post/wk4-b.html">Today's Lecture</a></p>
+        <p><a href="post/wk5-a.html">Today's Lecture</a></p>
       </div>
 
       <div class="large-4 columns">
