--- a/index.html
+++ b/index.html
@@ -31,16 +31,13 @@
       <hr>
 
       <div class="large-8 columns panel callout radius">
-        <h2><a href="post/wk5-a.html">Today</a></h2>
+        <h2><a href="post/wk5-b.html">Today</a></h2>
           
           <ul>
-            <li>Start<a href="post/p2-resume.html"> P2 : Resume</a></li>
-            <li>cont. float &amp; positioning properties</li>
-            <li>CSS Specificity</li>
-            <li>Midterm Review</li>
+            <li>cont. Midterm Review</li>
           </ul>
 
-        <p><a href="post/wk5-a.html">Today's Lecture</a></p>
+        <p><a href="post/wk5-b.html">Today's Lecture</a></p>
       </div>
 
       <div class="large-4 columns">
@@ -106,6 +103,7 @@
           <div class="large-4 columns">
             <h3>Week 5</h3>
             <li><a href="post/wk5-a.html">Mon/Tue: 2/3 &amp; 2/4</a></li>
+            <li><a href="post/wk5-b.html">Mon/Tue: 2/5 &amp; 2/6</a></li>
           </div>
           <div class="large-4 columns">
             <h3>Week 6</h3>
