--- a/index.html
+++ b/index.html
@@ -17,8 +17,6 @@
           <nav>
           <dl class="sub-nav">
             <dd><a href="index.html">Today</a></dd>
-            <dd><a href="#">Stages</a></dd>
-            <dd><a href="#">Reference</a></dd>
           </dl>
           </nav> 
 
@@ -34,7 +32,9 @@
         <h2><a href="post/wk5-b.html">Today</a></h2>
           
           <ul>
-            <li>cont. Midterm Review</li>
+            <li>Review Midterm Solutions</li>
+            <li><a href="http://css-tricks.com/specifics-on-css-specificity/">CSS Specifity</a></li>
+            <li>Peer Critiques P1 &amp; P2</li>
           </ul>
 
         <p><a href="post/wk5-b.html">Today's Lecture</a></p>
