--- a/index.html
+++ b/index.html
@@ -14,11 +14,6 @@
       <div class="large-4 columns">
         
         <h1><a href="index.html">DESN 368</a></h1>
-          <nav>
-          <dl class="sub-nav">
-            <dd><a href="index.html">Today</a></dd>
-          </dl>
-          </nav> 
 
       </div>
     </div>
@@ -29,15 +24,13 @@
       <hr>
 
       <div class="large-8 columns panel callout radius">
-        <h2><a href="post/wk5-b.html">Today</a></h2>
+        <h2><a href="post/wk7-a.html">Today</a></h2>
           
           <ul>
-            <li>Review Midterm Solutions</li>
-            <li><a href="http://css-tricks.com/specifics-on-css-specificity/">CSS Specifity</a></li>
-            <li>Peer Critiques P1 &amp; P2</li>
+            <li><a href="post/wk7-a.html">2/19 Post</a></li>
           </ul>
 
-        <p><a href="post/wk5-b.html">Today's Lecture</a></p>
+        <p><a href="post/wk7-a.html">Today's Lecture</a></p>
       </div>
 
       <div class="large-4 columns">
