--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       
       <h3>Notices</h3>
       <ul>
-        <li>Start<a href="post/p2-resume.html"> P2 : Resume</a>, Due Sunday 2/9 at 5pm</li>
+        <li><a href="https://manikoth.typeform.com/to/C4rH35">Assignment 4</a></li>
       </ul>
 
     </div>
