--- a/index.html
+++ b/index.html
@@ -24,13 +24,17 @@
       <hr>
 
       <div class="large-8 columns panel callout radius">
-        <h2><a href="post/wk7-a.html">Today</a></h2>
+        <h2><a href="post/wk8-a.html">Today</a></h2>
           
           <ul>
-            <li><a href="post/wk7-a.html">2/19 Post</a></li>
+            <li>Part II of transition property</li>
+            <li>Conclude Tables &amp; Forms</li>
+            <li>Introduce P3: Style Tile</li>
+            <li>Introduce RWD</li>
+            <li><a href="post/wk8-a.html">2/24 Post</a></li>
           </ul>
 
-        <p><a href="post/wk7-a.html">Today's Lecture</a></p>
+        <p><a href="post/wk8-a.html">Today's Lecture</a></p>
       </div>
 
       <div class="large-4 columns">
