--- a/index.html
+++ b/index.html
@@ -24,24 +24,22 @@
       <hr>
 
       <div class="large-8 columns panel callout radius">
-        <h2><a href="post/wk8-a.html">Today</a></h2>
+        <h2><a href="post/wkb-a.html">Today</a></h2>
           
           <ul>
-            <li>Part II of transition property</li>
-            <li>Conclude Tables &amp; Forms</li>
-            <li>Introduce P3: Style Tile</li>
-            <li>Introduce RWD</li>
-            <li><a href="post/wk8-a.html">2/24 Post</a></li>
+            <li>Cont. RWD Process</li>
+            <li><a href="post/p3-style-tile.html">P3: Style Tile</a>Due: Wed 3/5 by Midnight</li>
+            <li><a href="post/wkb-a.html">2/26 Post</a></li>
           </ul>
 
-        <p><a href="post/wk8-a.html">Today's Lecture</a></p>
+        <p><a href="post/wkb-a.html">Today's Lecture</a></p>
       </div>
 
       <div class="large-4 columns">
       
       <h3>Notices</h3>
       <ul>
-        <li><a href="https://manikoth.typeform.com/to/C4rH35">Assignment 4</a></li>
+        <li><a href="post/p3-style-tile.html">P3: Style Tile</a>Due: Wed 3/5 by Midnight</li>
       </ul>
 
     </div>
