--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
       <hr>
 
       <div class="large-8 columns panel callout radius">
-        <h2><a href="post/wkb-a.html">Today</a></h2>
+        <h2><a href="post/wk8-b.html">Today</a></h2>
           
           <ul>
             <li>Cont. RWD Process</li>
             <li><a href="post/p3-style-tile.html">P3: Style Tile</a>Due: Wed 3/5 by Midnight</li>
-            <li><a href="post/wkb-a.html">2/26 Post</a></li>
+            <li><a href="post/wk8-b.html">2/26 Post</a></li>
           </ul>
 
-        <p><a href="post/wkb-a.html">Today's Lecture</a></p>
+        <p><a href="post/wk8-b.html">Today's Lecture</a></p>
       </div>
 
       <div class="large-4 columns">
