--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <h3>Notices</h3>
       <ul>
         <li><a href="post/p3-style-tile.html">P3: Style Tile</a>Due: Wed 3/5 by Midnight</li>
-        <li><a href="https://manikoth.typeform.com/to/C4rH35">Assignment 4</a></li>
+        <li><a href="https://manikoth.typeform.com/to/C4rH35">Assignment 4</a>Due: 2/26 by Midnight</li>
       </ul>
 
     </div>
