--- a/index.html
+++ b/index.html
@@ -24,13 +24,9 @@
       <hr>
 
       <div class="large-8 columns panel callout radius">
-        <h2><a href="post/wk9-a.html">Today</a></h2>
+        <h2><a href="post/wk9-b.html">Today</a></h2>
           
-          <ul>
-            <li>Cont. RWD Process</li>
-            <li>Keyframe Animation</li>
-            <li>Advanced Selectors</li>
-            <li><a href="post/wk9-a.html">3/3 Post</a></li>
+            <li><a href="post/wk9-b.html">3/5 & 3/6 Post</a></li>
           </ul>
 
         <p><a href="post/wk9-a.html">Today's Lecture</a></p>
@@ -123,6 +119,7 @@
            <div class="large-4 columns">
           <h3>Week 9</h3>
             <li><a href="post/wk9-a.html">Mon/Tue: 3/3-3/4</a></li>
+            <li><a href="post/wk9-b.html">Tue/Thur: 3/5-3/6</a></li>
           </div>
       
       </div>
