Fonts, Icons, Noise

--- a/index.html
+++ b/index.html
@@ -23,13 +23,17 @@
     
     <nav class="row">
       <div class="columns large-4">
-        <a href="#">Daily</a>
+        <a href="#">
+          <span class="entypo-newspaper"></span>
+          Daily
+        </a>
       </div>
       <div class="columns large-4">
-        <a href="#">Calendar</a>
+        <a href="#"><span class="entypo-sweden"></span>Calendar</a>
       </div>
       <div class="columns large-4">
-        <a href="#">Reference</a>
+        
+        <a href="#"><span class="entypo-book"></span>Reference</a>
       </div>
     </nav>
 
