--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         
         <h3>Notices</h3>
         <ul>
-          <li><a href="post/p3-style-tile.html">P3: Style Tile</a>Due: Wed 3/5 by Midnight</li>
+          <li><a href="https://manikoth.typeform.com/to/kXFLHE">Assignment 5</a> Due: Thur, 3/15 by Midnight</li>
         </ul>
 
       </div>
