--- a/index.html
+++ b/index.html
@@ -24,12 +24,9 @@
       <hr>
 
       <div class="large-8 columns panel callout radius">
-        <h2><a href="post/wk9-b.html">Today</a></h2>
-          
-            <li><a href="post/wk9-b.html">3/5 & 3/6 Post</a></li>
-          </ul>
+        <h2><a href="post/wk10-a.html">Today</a></h2>
 
-        <p><a href="post/wk9-a.html">Today's Lecture</a></p>
+        <p><a href="post/wk10-a.html">Today's Lecture</a></p>
       </div>
 
       <div class="large-4 columns">
