--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
 
       <div class="large-8 columns panel callout radius">
         <h2><a href="post/wk10-a.html">Today</a></h2>
-
+        <ul>
+          <li><a href="https://github.com/vcd/368/wiki/P4:-Image-Gallery">P4: Image Gallery</a></li>
+          <li>Customizing Code Sources</li>
+          <li>Image Replacement Techniques</li>
+        </ul>
         <p><a href="post/wk10-a.html">Today's Lecture</a></p>
       </div>
 
@@ -33,8 +37,7 @@
       
       <h3>Notices</h3>
       <ul>
-        <li><a href="post/p3-style-tile.html">P3: Style Tile</a>Due: Wed 3/5 by Midnight</li>
-        <li><a href="https://manikoth.typeform.com/to/C4rH35">Assignment 4</a>Due: 2/26 by Midnight</li>
+        <li><a href="https://github.com/vcd/368/wiki/P4:-Image-Gallery">P4: Image Gallery</a> Due. Sun, 2/16 by Midnight</li>
       </ul>
 
     </div>
