--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="large-8 columns panel callout radius">
         <h2><a href="post/wk10-a.html">Today</a></h2>
         <ul>
-          <li><a href="https://github.com/vcd/368/wiki/P4:-Image-Gallery">P4: Image Gallery</a></li>
+          <li><a href="post/p4-gallery.html">P4: Image Gallery</a></li>
           <li>Customizing Code Sources</li>
           <li>Image Replacement Techniques</li>
         </ul>
@@ -37,7 +37,7 @@
       
       <h3>Notices</h3>
       <ul>
-        <li><a href="https://github.com/vcd/368/wiki/P4:-Image-Gallery">P4: Image Gallery</a> Due. Sun, 2/16 by Midnight</li>
+        <li><a href="post/p4-gallery.html">P4: Image Gallery</a> Due. Sun, 2/16 by Midnight</li>
       </ul>
 
     </div>
