--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
       <hr>
 
       <div class="large-8 columns panel callout radius">
-        <h2><a href="post/wk10-a.html">Today</a></h2>
+        <h2><a href="post/wk10-b.html">Today</a></h2>
         <ul>
-          <li><a href="post/p4-gallery.html">P4: Image Gallery</a></li>
-          <li>Customizing Code Sources</li>
-          <li>Image Replacement Techniques</li>
+          <li><a href="post/p5-final.html">Final Project Due</a> Friday, 2/21 at Midnight</li>
+        <li>3D Transforms</li>
+        <li>Future of CSS</li>
         </ul>
-        <p><a href="post/wk10-a.html">Today's Lecture</a></p>
+        <p><a href="post/wk10-b.html">Today's Lecture</a></p>
       </div>
 
       <div class="large-4 columns">
@@ -38,6 +38,7 @@
       <h3>Notices</h3>
       <ul>
         <li><a href="post/p4-gallery.html">P4: Image Gallery</a> Due. Sun, 2/16 by Midnight</li>
+        <li><a href="post/p5-final.html">P5: Portfolio</a> Due. Sun, 2/16 by Midnight</li>
       </ul>
 
     </div>
@@ -103,23 +104,29 @@
       <div class="large-12 columns">
         <h2>Stage 3: Transitions, Animations, &amp; RWD</h2>
           
-          <div class="large-4 columns">
+          <div class="large-3 columns">
           <h3>Week 7</h3>
             <li><a href="post/wk7-a.html">Mon-Thur: 2/16-2/20</a></li>
             <li><a href="post/p2-resume.html">P2: Resume</a></li>
           </div>
 
-          <div class="large-4 columns">
+          <div class="large-3 columns">
           <h3>Week 8</h3>
             <li><a href="post/wk8-a.html">Mon/Tue: 2/24 & 2/25</a></li>
             <li><a href="post/wk8-b.html">Wed/Thur: 2/26 & 2/27</a></li>
             <li><a href="post/p3-style-tile.html">P3: Stile Tile</a></li>
           </div>
 
-           <div class="large-4 columns">
+           <div class="large-3 columns">
           <h3>Week 9</h3>
             <li><a href="post/wk9-a.html">Mon/Tue: 3/3-3/4</a></li>
             <li><a href="post/wk9-b.html">Tue/Thur: 3/5-3/6</a></li>
+          </div>
+
+           <div class="large-3 columns">
+          <h3>Week 10</h3>
+            <li><a href="post/wk10-a.html">Mon/Tue: 3/10-3/11</a></li>
+            <li><a href="post/wk10-b.html">Tue/Thur: 3/12-3/13</a></li>
           </div>
       
       </div>
