--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="large-8 columns panel callout radius">
         <h2><a href="post/wk10-b.html">Today</a></h2>
         <ul>
-          <li><a href="post/p5-final.html">Final Project Due</a> Friday, 2/21 at Midnight</li>
+          <li><a href="post/p5-final.html">P5: Portfolio (Final Project) </a>Due: Friday, 2/21 at Midnight</li>
         <li>3D Transforms</li>
         <li>Future of CSS</li>
         </ul>
@@ -38,7 +38,7 @@
       <h3>Notices</h3>
       <ul>
         <li><a href="post/p4-gallery.html">P4: Image Gallery</a> Due. Sun, 2/16 by Midnight</li>
-        <li><a href="post/p5-final.html">P5: Portfolio</a> Due. Sun, 2/16 by Midnight</li>
+        <li><a href="post/p5-final.html">P5: Portfolio</a> Due. Fri, 2/21 by Midnight</li>
       </ul>
 
     </div>
