--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
           <ul>
             <li><a href="https://github.com/vcd/368/wiki/368-Syllabus">Syllabus</a></li>
-            <li>TextBook: <a href="TreeHouse : Academic Discount Link">TeamTreeHouse Academic Discount</a></li>
+            <li>TextBook: <a href="https://teamtreehouse.com/signup_code/ManiKoth">TeamTreeHouse Academic Discount</a></li>
             <li>Text Editor: <a href="http://www.sublimetext.com/">Sublime Text</a></li>
             <li><a href="http://slid.es/manikoth/intro-version-control/live">Version Control</a></li>
             <li><a href="http://slid.es/manikoth/368-course-intro/live">Review Course Intro</a></li>
