--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         
         <h3>Notices</h3>
         <ul>
+          <li><a href="https://manikoth.typeform.com/to/iTEyKj">Assignment 1</a> Due Sun. 4/13 by Midnight</li>
           <li>Complete <a href="https://manikoth.typeform.com/to/eKoGIy">Roster Form</a></li>
         </ul>
 
