--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <h3>Notices</h3>
         <ul>
            <li><a href="https://manikoth.typeform.com/to/iTEyKj">Assignment 1</a> Due Sun. 4/13 by Midnight</li>
-          <li>TreeHouse? Use <a href="TreeHouse : Academic Discount Link">Academic Discount</a></li>
+          <li>TreeHouse? Use <a href="https://teamtreehouse.com/signup_code/ManiKoth">Academic Discount</a></li>
           <li>Complete <a href="https://manikoth.typeform.com/to/eKoGIy">Roster Form</a></li>
         </ul>
 
