--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
         
         <h3>Today</h3>
          <ul>
+          <li>
+              <a href="post/wk3.html">Week 3 Post</a>
+            </li>
             <li>
               <a href="post/wk2.html">Week 2 Post</a>
             </li>
