--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
         <h3>Today</h3>
          <ul>
           <li>
+              <a href="post/wk4.html">Week 4 Post</a>
+            </li>
+          <li>
               <a href="post/wk3.html">Week 3 Post</a>
             </li>
             <li>
@@ -58,9 +61,9 @@
         
         <h3>Notices</h3>
         <ul>
-           <li><a href="https://manikoth.typeform.com/to/iTEyKj">Assignment 1</a> Due Sun. 4/13 by Midnight</li>
-          <li>TreeHouse? Use <a href="https://teamtreehouse.com/signup_code/ManiKoth">Academic Discount</a></li>
-          <li>Complete <a href="https://manikoth.typeform.com/to/eKoGIy">Roster Form</a></li>
+          <li>Midterm May 1st at 1pm</li>
+          <li><a href="post/p2-resume.html">P2: Resume</a> due May</li>
+          <li><a href="https://manikoth.typeform.com/to/ugO6jc">Assignment 2</a></li>
         </ul>
 
       </div>
