--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <ul>
           <li>Midterm May 1st at 1pm</li>
           <li><a href="post/p2-resume.html">P2: Resume</a> due May</li>
-          <li><a href="https://manikoth.typeform.com/to/ugO6jc">Assignment 2</a></li>
+          <li><a href="https://manikoth.typeform.com/to/ugO6jc">Assignment 2</a>Due Sun. 4/27 by Midnight</li>
         </ul>
 
       </div>
