--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
         <h3>Today</h3>
          <ul>
           <li>
+              <a href="post/wk5.html">Week 5 Post</a>
+            </li>
+          <li>
               <a href="post/wk4.html">Week 4 Post</a>
             </li>
           <li>
