--- a/index.html
+++ b/index.html
@@ -67,8 +67,7 @@
         <h3>Notices</h3>
         <ul>
           <li>Midterm May 1st at 1pm</li>
-          <li><a href="post/p2-resume.html">P2: Resume</a> due May</li>
-          <li><a href="https://manikoth.typeform.com/to/ugO6jc">Assignment 2</a>Due Sun. 4/27 by Midnight</li>
+          <li><a href="https://manikoth.typeform.com/to/PLDgry">Assignment 3</a> Due Sun. 5/4 by Midnight </li>
         </ul>
 
       </div>
