--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         <ul>
           <li>Midterm May 1st at 1pm</li>
           <li><a href="https://manikoth.typeform.com/to/PLDgry">Assignment 3</a> Due Sun. 5/4 by Midnight </li>
+          <li><a href="post/p2-resume.html">P2: Resume</a> due May 6th at 1pm</li>
         </ul>
 
       </div>
