--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
         <h3>Today</h3>
          <ul>
           <li>
+              <a href="post/wk7.html">Week 7 Post</a>
+            </li>
+          <li>
               <a href="post/wk6.html">Week 6 Post</a>
             </li>
           <li>
@@ -69,9 +72,8 @@
         
         <h3>Notices</h3>
         <ul>
-          <li>Midterm May 1st at 1pm</li>
-          <li><a href="https://manikoth.typeform.com/to/PLDgry">Assignment 3</a> Due Sun. 5/4 by Midnight </li>
-          <li><a href="post/p2-resume.html">P2: Resume</a> due May 6th at 1pm</li>
+          <li>P3: Style Tile due 5/20 by 1pm</li>
+          <li><a href="https://manikoth.typeform.com/to/PLDgry">Assignment 4</a> Due Sun. 5/18 by Midnight </li>
         </ul>
 
       </div>
