--- a/index.html
+++ b/index.html
@@ -75,8 +75,10 @@
         
         <h3>Notices</h3>
         <ul>
-          <li>P3: Style Tile due 5/20 by 1pm</li>
-          <li><a href="https://manikoth.typeform.com/to/jQAjQX">Assignment 4</a> Due Sun. 5/18 by Midnight </li>
+          <li><a href="https://manikoth.typeform.com/to/RwSd2P">AS #5</a> due Sun. 6/01 by Midnight</li>
+          <li><a href="post/p4-portfolio.html">P4: Portfolio</a> due Tue. 6/03 by Midnight</li>
+          <li><a href="post/p5.html">P5: Final</a> due Tue. 6/10 by Midnight</li>
+          <li>In Class Exam: <strong>Monday, June 9th at 1-3 pm</strong></li>
         </ul>
 
       </div>
