--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
         <h3>Today</h3>
          <ul>
           <li>
+              <a href="post/wk9.html">Week 9 Post</a>
+            </li>
+           <li>
               <a href="post/wk8.html">Week 8 Post</a>
             </li>
           <li>
