--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
         
         <h3>Today</h3>
          <ul>
+          <li><a href="post/wk10.html">Week 10 Post</a></li>
           <li>
               <a href="post/wk9.html">Week 9 Post</a>
             </li>
