--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <ul>
           <li><a href="https://manikoth.typeform.com/to/RwSd2P">AS #5</a> due Sun. 6/01 by Midnight</li>
           <li><a href="post/p4-portfolio.html">P4: Portfolio</a> due Tue. 6/03 by Midnight</li>
-          <li><a href="post/p5.html">P5: Final</a> due Tue. 6/10 by Midnight</li>
+          <li><a href="http://vcd.github.io/368/post/p5-final.html">P5: Final</a> due Tue. 6/10 by Midnight</li>
           <li>In Class Exam: <strong>Monday, June 9th at 1-3 pm</strong></li>
         </ul>
 
