--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
         
         <h3>Notices</h3>
         <ul>
+          <li><a href="https://manikoth.typeform.com/to/xNRTvP">Assignment 1</a> due Tue. 10/7 at 10am (section B) / 1pm (section A)</li>
           <li><a href="https://manikoth.typeform.com/to/MVraMN">Complete Roster</a></li>
           <li>Create all required accounts by Tue. 9/30</li>
         </ul>
