--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h3>Week 2: 9/30 & 10/2</h3>
         
         
-        <p>See <a href="post/wk2.html">Week 2 Post</a></p>
+        <h5>See <a href="post/wk2.html">Week 2 Post</a></h5>
 
 
         <hr>
