--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
 
       <div class="today large-6 columns">
         
+        <h3><a href="post/session7.html">Session 7</a></h3>   
+
+        <hr>
 
         <h3><a href="post/session6.html">Session 6</a></h3>
 
