--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         
         <h3>Notices</h3>
         <ul>
-          <li>Midterm: Tue. Oct. 28 at 10/1pm</li>
+          <li>Midterm: Tue. Oct. 28 at 10am / 1pm</li>
           <li><a href="https://manikoth.typeform.com/to/sBtE4b">Assignment 3</a> Due Thur. Oct. 23 at 10am/1pm</li>
           <li>P1: Bio is apart of <a href="https://manikoth.typeform.com/to/sBtE4b">Assignment 3</a></li>
           
