--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <ul>
           <li>Midterm: Tue. Oct. 28 at 10am / 1pm</li>
           <li><a href="https://manikoth.typeform.com/to/sBtE4b">Assignment 3</a> Due Thur. Oct. 23 at 10am/1pm</li>
-          <li>P1: Bio is apart of <a href="https://manikoth.typeform.com/to/sBtE4b">Assignment 3</a></li>
+          <li><a href="http://codepen.io/manikoth/live/wvjtp">P1: Bio</a> is apart of Assignment 3</li>
           
           <!--
           <li><a href="https://manikoth.typeform.com/to/PULpd8">Assignment 2 </a>due Thur. 10/16 at 10am (section B) / 1pm (section A)</li>
