--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
 
       <div class="today large-6 columns">
         
+        <h3><a href="post/session9.html">Session 9</a></h3>   
+
+        <hr>
+
         <h3><a href="post/session8.html">Session 8</a></h3>   
 
         <hr>
